TUTORIAL Strip implementation details

--- a/src/main/resources/translations/en/events.json
+++ b/src/main/resources/translations/en/events.json
@@ -1,7 +1,7 @@
 {
   "events": {
     "service_operation": {
-      "todoist": {
+      "todo": {
         "instances": {
           "create": {
             "name": "Create instance",
