--- a/src/main/resources/translations/en/messages.json
+++ b/src/main/resources/translations/en/messages.json
@@ -1,6 +1,6 @@
 {
   "message": {
-    "todoist": {
+    "todolist": {
       "unreachable_connection": {
         "content": "Could not establish a connection to the service",
         "type": "error"
